    Changed the `lists` plugin to apply list styles to all text blocks within a selection #TINY-3755
    Changed the `advlist` plugin to log a console error message when the `list` plugin isn't enabled #TINY-6585
    Changed the z-index of the `setProgressState(true)` throbber so it does not hide notifications #TINY-6686
    Fixed table width style was removed when copying #TINY-6664
    Fixed the order of CSS precedence of `content_style` and `content_css` in the `preview` and `template` plugins. `content_style` now has precedence #TINY-6529
    Fixed an issue where the image dialog tried to calculate image dimensions for an empty image URL #TINY-6611
    Fixed an issue where `scope` attributes on table cells would not change as expected when merging or unmerging cells #TINY-6486
    Fixed the plugin documentation links in the `help` plugin #DOC-703
    Fixed an issue with external styles bleeding into TinyMCE #TINY-6735
    Fixed incorrect return types on `editor.selection.moveToBookmark` #TINY-6504
Version 5.6.2 (2020-12-08)
    Fixed a UI rendering regression when the document body is using `display: flex` #TINY-6783
Version 5.6.1 (2020-11-25)
    Fixed the `mceTableRowType` and `mceTableCellType` commands were not firing the `newCell` event #TINY-6692
    Fixed the HTML5 `s` element was not recognized when editing or clearing text formatting #TINY-6681
    Fixed an issue where copying and pasting table columns resulted in invalid HTML when using colgroups #TINY-6684
    Fixed an issue where the toolbar would render with the wrong width for inline editors in some situations #TINY-6683
Version 5.6.0 (2020-11-18)
    Added new `BeforeOpenNotification` and `OpenNotification` events which allow internal notifications to be captured and modified before display #TINY-6528
    Added support for `block` and `unblock` methods on inline dialogs #TINY-6487
    Added new `TableModified` event which is fired whenever changes are made to a table #TINY-6629